toList can be used here